fix: assert the counterpart indexes are resolved rather than defaulting their count to zero
`counterpartIndexes == null ? 0 : counterpartIndexes.getCardinality()` looked like a null
guard but the null branch is unreachable: `counterpartIndexes` is populated by the same block
that populates `candidates`, and the check above has already returned when that block never
ran.

Unreachable is not the same as harmless. If the premise were ever broken the expression would
quietly yield a zero count, which makes `isWorthRewriting` unconditionally true - the rewrite
would be taken on evidence it never gathered. A premise check says what is actually being
relied on and fails where the assumption breaks, rather than at the wrong answer downstream.

Ref: #1585